# Domain-Security

./: .env.example  .gitignore  Caddyfile  Dockerfile  README.md  TODO.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: __init__.py
app/core/: __init__.py  analysis_cache.py  auth_session.py  config.py  exceptions.py  scheduler.py
app/db/: __init__.py  models.py  session.py
app/presenters/: __init__.py  monitoring_plus_offer_presenter.py  pdf_report_presenter.py  report_presenter.py  ui_formatters.py
app/schemas/: __init__.py  analysis.py  api_tokens.py  auth.py  discovery.py  external_monitoring.py  history.py  monitoring.py  monitoring_plus.py  wordpress.py
app/services/: __init__.py  alert_service.py  analysis_history_service.py  analysis_service.py  api_token_service.py  asset_discovery_service.py  auth_service.py  billing_service.py  (+23 more)
docs/: architecture.md
scripts/: deploy.sh
tests/: __init__.py  conftest.py  fakes.py  premium_test_utils.py  test_analysis_history_service.py  test_analysis_service.py  test_application.py  test_asset_discovery_service.py  test_billing_service.py  test_domain_registration_service.py  test_email_auth_service.py  test_email_policy_service.py  test_email_tls_service.py  test_health.py  test_ip_intelligence_service.py  test_monitoring_plus_service.py  test_monitoring_service.py  test_report_export_service.py  test_scoring_service.py  test_traffic_detection_service.py  test_traffic_ingest_service.py  test_website_tls_service.py  test_wordpress_security_service.py
(+66 files in other folders)
