[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "domain-security-checker"
version = "0.1.0"
description = "Simple domain security and email authentication checker."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "dnspython>=2.6.1,<3.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "jinja2>=3.1.4,<4.0.0",
  "pydantic>=2.7.0,<3.0.0",
  "sqlalchemy>=2.0.29,<3.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0,<1.0.0",
  "pytest>=8.2.0,<9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = [
  "app",
  "app.api",
  "app.api.routes",
  "app.core",
  "app.db",
  "app.schemas",
  "app.services",
  "app.utils",
]

